--- a/rmarkdown/default.rmd
+++ b/rmarkdown/default.rmd
@@ -1,11 +1,13 @@
 ---
 title: "RMarkdown Home"
 author: "Ed Mason"
-output: html_document
+output: html_notebook
 ---
 
 ```{r setup, include=FALSE}
-# Setup code
+library(tidyverse)
 ```
 
 Last updated: `r Sys.Date()`
+
+Built with: `r getRversion()`
